Fix* Index page

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Shalom Taiwo | WordPress Developer</title>
-        <meta name="description" content="Web developer with a love for WordPress and a passion for simplicity. I am always developing and motivated to create meaningful work.">
+        <title>Shalom Taiwo | Web Developer</title>
+        <meta name="description" content="Web developer with a love for simplicity.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/shalomt.css">
         <link rel="stylesheet" href="./css/form.css">
