fix contact link

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 </div>
 <div class="subs_text"></div>
             </div>
-            <div class="contact_bg">
+            <div id="contact" class="contact_bg">
             <div class="contact_details">
                 <div class="contact_options">
                     <p class="cf_email"><i class="fas fa-envelope fa-2x"></i><a href="mailto:info@shalomt.me">info@shalomt.com</a></p>
